code/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-color
  namespace: test
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        roll: test1
    spec:
      containers:
      - name: nginx
        image: footstepsolutions/demo-color:green
        imagePullPolicy: Always
        ports:
        - containerPort: 80
