code/nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx
    app.kubernetes.io/instance: demo-argo-app
  name: frontend-service
  namespace: test
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30031
  selector:
    app: nginx
  type: NodePort
status:
  loadBalancer: {}
