code/ing.yaml
# kind: Ingress
# apiVersion: networking.k8s.io/v1
# metadata:
#   name: frontend-service
#   namespace: test
#   # annotations:
#   #   nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#   -
#     host: color.cloudgypsy.com.au
#     http:
#       paths:
#       -
#         path: /
#         backend:
#           serviceName: frontend-service
#           servicePort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: test
  name: frontend-service
spec:
  rules:
  - host: "color.cloudgypsy.com.au"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-service
            port:
              number: 443
  # - host: "*.foo.com"
  #   http:
  #     paths:
  #     - pathType: Prefix
  #       path: "/foo"
  #       backend:
  #         service:
  #           name: service2
  #           port:
  #             number: 80
