code/secure-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-service-tls
  namespace: test
spec:
  # ingressClassName: nginx
  tls:
  - hosts:
    - "color.cloudgypsy.com.au"
    secretName: cloudgypsy-tls-chain
    # secretName: cloudgypsy-tls
  rules:
  - host: "color.cloudgypsy.com.au"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: frontend-service
              port:
                number: 443
